--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,16 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^4.21.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
