--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,15 @@ fastapi = "0.115.6"
 uvicorn = { extras = ["standard"], version = "0.32.1" }
 websockets = "14.1"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.0"
+pytest-asyncio = "^0.24"
+httpx = "^0.27"
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
